fix: fix footer implement overflow

--- a/section-4/section-4.css
+++ b/section-4/section-4.css
@@ -1,7 +1,7 @@
-.usability {
+.footer {
 position: relative;
 }
-.usability__container {
+.footer__container {
 position: relative;
 display: flex;
 flex-direction: column;
@@ -13,26 +13,26 @@ padding-left: 15px;
 padding-right: 15px;
 }
 
-.usability__background {
+.footer__background {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
 }
-.usability__image-stars {
+.footer__image-stars {
     position: relative;
     object-fit: cover;
     width: 100%;
     height: 100%;
 }
-.usability__text-1 {
+.footer__text-1 {
     position: relative;
     z-index: 2;
     padding: 0 0 15px 0;
 }
 @media(min-width: 500px){
-    .usability__text-1 {
+    .footer__text-1 {
         font-size: 20px;
         text-align: center;
     }
@@ -42,7 +42,7 @@ padding-right: 15px;
     position: relative;
     z-index: 2;
 }
-.usability__text-2 {
+.footer__text-2 {
     font-size: 16px;
     line-height: 23px;
     letter-spacing: 2px;
@@ -50,26 +50,28 @@ padding-right: 15px;
     color: #181818;
     opacity: 0.8;
     border-radius: 20px;
-    padding: 30px 15px;
+    padding: 0px 15px;
     margin:0 0 30px 0;
+    height: 48px;
+    overflow: scroll;
 
 }
-.usability__wrap-btn {
+.footer__wrap-btn {
     position: relative;
     z-index: 2;
     margin: 0 0 50px 0;
 }
-.usability__btn {
+.footer__btn {
 }
 
-.usability__year-wrap {
+.footer__year-wrap {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2;
 }
-.usability__circle {
+.footer__circle {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,7 +82,7 @@ padding-right: 15px;
     color:#FFFFFF80;
     margin: 0 10px 0 0;
 }
-.usability__year {
+.footer__year {
     font-size: 14px;
     line-height: 23px;
     letter-spacing: 2px;
